Update base64 decoder usage