@@ -2,16 +2,16 @@ import com.joyent.manta.client.MantaClient;
 import com.joyent.manta.client.MantaObjectResponse;
 import com.joyent.manta.config.*;
 import com.joyent.manta.http.MantaHttpHeaders;
-import sun.misc.BASE64Decoder;
 
+import java.util.Base64;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Scanner;
 
+
 /*
 * Usage: set the mantaUserName, privateKeyPath, and publicKeyId with your own values.
  */
-
 public class ClientEncryptionRangeDownload {
 
     public static void main(String... args) throws IOException {
@@ -33,7 +33,7 @@ public class ClientEncryptionRangeDownload {
                 .setEncryptionAuthenticationMode(EncryptionAuthenticationMode.Optional)
                 .setPermitUnencryptedDownloads(false)
                 .setEncryptionKeyId("simple/example")
-                .setEncryptionPrivateKeyBytes((new BASE64Decoder()).decodeBuffer("RkZGRkZGRkJEOTY3ODNDNkM5MUUyMjIyMTExMTIyMjI="));
+                .setEncryptionPrivateKeyBytes(Base64.getDecoder().decode("RkZGRkZGRkJEOTY3ODNDNkM5MUUyMjIyMTExMTIyMjI="));
 
         try (MantaClient client = new MantaClient(config)) {
             String mantaPath = "/" + mantaUserName + "/stor/foo";
